<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemFragment">

    <EditText
        android:id="@+id/itemNameForShelf"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Item_Name"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:translationY="-300dp"
        android:background="@drawable/background_for_additemfragment"/>

    <EditText
        android:id="@+id/storeNameForShelf"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/background_for_additemfragment"
        android:ems="10"
        android:hint="Store Name"
        android:inputType="text"
        android:textColor="@color/white"
        android:translationY="-228dp" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/background_for_additemfragment"
        android:clickable="true"
        android:drawableEnd="@android:drawable/ic_menu_today"
        android:focusable="false"
        android:hint="Purchase Date"
        android:inputType="none"
        android:padding="12dp"
        android:textColorHint="@color/white"
        android:translationX="20dp"
        android:translationY="-130dp" />
    <EditText
        android:id="@+id/editExpireDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Expired_Date"
        android:focusable="false"
        android:inputType="none"
        android:clickable="true"
        android:drawableEnd="@drawable/baseline_more_vert_24"
        android:padding="12dp"
        android:textColorHint = "@color/white"
        android:layout_gravity="center_vertical"
        android:translationY="-130dp"
        android:translationX="240dp"
        android:background="@drawable/background_for_additemfragment"/>

    <Button
        android:id="@+id/cancel_addingItem"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Cancel"
        android:textColor="@color/black"
        android:translationX="50dp"
        android:translationY="325dp" />

    <Button
        android:id="@+id/submitToShelf"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Submit"
        android:textColor="@color/black"
        android:translationX="-70dp"
        android:translationY="325dp" />
</FrameLayout>